@@ -14,6 +14,7 @@ director/director.c \
 exit/exit.c \
 hole/hole.c \
 identify_altar/identify_altar.c \
+lighter/lighter.c \
 pedestal/pedestal.c \
 player_mover/player_mover.c \
 power_crystal/power_crystal.c \
